form btn overlaping issue solved tags replaced

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3155,7 +3155,7 @@ width: auto;
         
 
     .resp-screen{
-        height:100vh;
+        height:750px;
          width:100%;
     }
 
